# chat_network

tcp/: CMakeLists.txt  common.h  tcp_client.cpp  tcp_server.cpp
tcp/build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
tcp/scripts/linux/: build_linux.sh  run_tcp_linux.sh
tcp/scripts/windows/: build_mingw.sh  run_mingw.sh
udp/: .gitignore  CMakeLists.txt  common.h  udp_client.cpp  udp_server.cpp
udp/scripts/: README.md
udp/scripts/linux/: build_linux.sh  clean_linux.sh  run_chat_linux.sh
udp/scripts/shared/: run_chat.sh
udp/scripts/windows/: build_all_windows.sh  build_mingw.sh  build_msvc.sh  clean_windows.sh  run_mingw.sh  run_msvc.sh
